compiler/crates/graphql-ir/tests/parse/fixtures/fragment-with-undefined-literal-arguments.invalid.expected
==================================== INPUT ====================================
# expected-to-throw
fragment ParentFragment on User {
  ...ChildFragment @arguments(pictureSize: 42) # error: $pictureSize not defined
}

fragment ChildFragment on User {
  profilePicture(size: $pictureSize) {
    uri
  }
}
==================================== ERROR ====================================
✖︎ Unknown argument 'pictureSize'

  fragment-with-undefined-literal-arguments.invalid.graphql:3:31
    2 │ fragment ParentFragment on User {
    3 │   ...ChildFragment @arguments(pictureSize: 42) # error: $pictureSize not defined
      │                               ^^^^^^^^^^^^^^^
    4 │ }
